Added simple visitor

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "compile": "npm run antlr4",
+    "antlr4": "java -Xmx500M -cp '/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH' org.antlr.v4.Tool  -Dlanguage=JavaScript -o lib -visitor ECMAScript.g4",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
