--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "js-runtime",
   "version": "1.0.0",
-  "description": "",
+  "description": "Source to source compiler using ANTLR",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "compile": "npm run antlr4-js && npm run antlr4-cs",
-    "antlr4-js": "java -Xmx500M -cp '/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH' org.antlr.v4.Tool  -Dlanguage=JavaScript -o lib -visitor ECMAScript.g4",
-    "antlr4-cs": "java -Xmx500M -cp '/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH' org.antlr.v4.Tool  -Dlanguage=JavaScript -o lib -visitor CSharpLexer.g4 CSharpParser.g4",
+    "compile": "npm run antlr4-js",
+    "antlr4-js": "java -Xmx500M -cp '/usr/local/lib/antlr-4.7.1-complete.jar:$CLASSPATH' org.antlr.v4.Tool  -Dlanguage=JavaScript -lib grammars -o lib -visitor -Xexact-output-dir grammars/ECMAScript.g4",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Alena Khineika <alena.khineika@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "antlr4": "^4.7.1"
